syntax = "proto3";

package drone;

// Sent by the drone to report its current position.
message DronePosition {
  string drone_id = 1;
  double latitude = 2;
  double longitude = 3;
  double altitude_m = 4;
  double heading_deg = 5;
  double speed_mps = 6;
  uint64 timestamp = 7;
}

service EchoService {
  rpc Echo(stream DronePosition) returns (stream DronePosition);
}
